# routes/api.php
@@ -5,6 +5,7 @@ use App\Http\Controllers\Api\ProfileController;
 use App\Http\Controllers\Api\UserController;
 use App\Http\Controllers\Api\LocationController;
 use App\Http\Controllers\Api\TripController;
+use App\Http\Controllers\Api\MatcheController;
 
 Route::apiResource('users', App\Http\Controllers\Api\UserController::class);
 Route::get('/users/{id}/profil', [UserController::class, 'getUserProfile']);
@@ -24,3 +25,4 @@ Route::put('/users/{id}/profil', [UserController::class, 'updateUserProfile']);
 
 Route::apiResource('locations', LocationController::class);
 Route::apiResource('trips', TripController::class);
+Route::apiResource('matches', MatcheController::class);
